testsuite/tests/rep-poly/UnliftedNewtypesCoerceFail.stderr

UnliftedNewtypesCoerceFail.hs:15:8: error:
    • Unsaturated use of a representation-polymorphic primitive function.
      The first argument of ‘coerce’
      does not have a fixed runtime representation.
      Its type is:
        a0 :: TYPE c0
      Cannot unify ‘rep’ with the type variable ‘c0’
      because it is not a concrete ‘RuntimeRep’.
    • In the expression: coerce
      In an equation for ‘goof’: goof = coerce
    • Relevant bindings include
        goof :: x -> y (bound at UnliftedNewtypesCoerceFail.hs:15:1)
